--- a/assest/about.html
+++ b/assest/about.html
@@ -1,38 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Story line</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/menu_style.css">
-    <link rel="shortcut icon" href="imeges/icon.ico" type="image/x-icon">
-</head>
-<body class="body">
-<div class="header">
-    <a href="index.html">
-        <div class="header_logo">
-    </div>
-        <div class="header_text">
-            <b>Dragons Tale</b>
-        </div> </a>
-    <div class="header_menu">
-        <ul class="header_ul" >
-            <li>
-                <a href="start.html">Play!</a>
-            </li>
-            <li>
-                <div class="header_pressed-button">About!</div>
-            </li>
-            <li>
-                <a href="top_list.html">Top list!</a>
-            </li>
-        </ul>
-    </div>
-</div>
-
-<div class="about_page">
+<div class="about__content">
     <p><b> Тут должно быть описание игры, но его нет)
-    Насладитесь картинкой пока что:</b></p>
+        Насладитесь картинкой пока что:</b></p>
     <img src ="imeges/logo.png" width="30%" height="30%">
     <p><i>Куча текста, описывающего игру</i>:<br>Описание игры.
         Ловишь драконов, прокачиваешь их, ловишь новых драконов,прокачиваешь новых драконов,ловишь новых драконов,прокачиваешь новых драконов,
@@ -43,5 +11,3 @@
         ловишь новых драконов,прокачиваешь новых драконов,ловишь новых драконов,прокачиваешь новых драконов,
         и так пока не победишь главного босса. </p>
 </div>
-</body>
-</html>
